# Masterthesis-Superorganism

./: .gitattributes  .gitignore  .gitmodules  README.md
implementation/superorganism/: Cargo.toml  README.md  docker-compose.yml
implementation/superorganism/node/: Cargo.toml
implementation/superorganism/node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
implementation/superorganism/pallets/community_identity/: Cargo.toml  LICENSE
implementation/superorganism/pallets/community_identity/src/: lib.rs  traits.rs
implementation/superorganism/pallets/council/: Cargo.toml
implementation/superorganism/pallets/council/src/: lib.rs  tests.rs  traits.rs
implementation/superorganism/pallets/project/: Cargo.toml
implementation/superorganism/pallets/project/src/: lib.rs  traits.rs  types.rs
implementation/superorganism/pallets/proposal/: Cargo.toml
implementation/superorganism/pallets/proposal/src/: lib.rs  mock.rs
implementation/superorganism/pallets/proposal_types/: Cargo.toml
implementation/superorganism/pallets/proposal_types/src/: lib.rs
implementation/superorganism/runtime/: Cargo.toml
implementation/superorganism/runtime/src/: lib.rs
implementation/superorganism/scripts/: docker_run.sh
