[package]
authors = ['Harald Heckmann <https:/github.com/sea212>']
description = 'FRAME pallet that manages community identities'
edition = '2018'
homepage = 'https://github.com/sea212/superorganism'
license = 'Apache-2.0'
name = 'pallet-community_identity'
repository = 'https://github.com/sea212/superorganism/master/pallets/community_identity'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
num-traits = { default-features = false, version = '0.2.14' }
serde = { features = ['derive'], optional = true, version = '1.0.117' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
	'num-traits/std',
	'serde/std',
]
