[package]
authors = ['Harald Heckmann <https:/github.com/sea212>']
description = 'FRAME pallet that manages community projects'
edition = '2018'
homepage = 'https://github.com/sea212/superorganism'
license = 'Apache-2.0'
name = 'pallet-project'
repository = 'https://github.com/sea212/superorganism/master/pallets/project'
version = '0.0.1'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
serde = { features = ['derive'], optional = true, version = '1.0.117' }
pallet-community_identity = { path = '../community_identity', default-features = false, version = '0.0.1' }
pallet-proposal_types = { path = '../proposal_types', default-features = false, version = '0.0.1' }

[dev-dependencies]
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }

[features]
default = ['std']
std = [
    'codec/std',
    'frame-support/std',
    'frame-system/std',
	'pallet-community_identity/std',
	'pallet-proposal_types/std',
	'serde/std',
]
